Leave promiscuous mode when detaching a parent (ifconfig -vlanif)

We have to call ifpromisc(ifp, 0) for both a VLAN interface
and its parent when they are in promiscuous mode.

PR 49196